--- a/index.html
+++ b/index.html
@@ -1,80 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Results summary component</title>
 
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="outer-container">
+      <div class="inner-container">
+        <div class="result-section">
+          <h1>Your Result</h1>
+          <div class="result-circle">
+            <span class="bold-num">76</span>
+            <span class="little-num">of 100</span>
+          </div>
+          <p style="margin: 0;font-weight: bold;">Great</p>
+          <p class="result-text">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </div>
+        <div class="summary-section">
+          <h1>Summary</h1>
 
-<div class="outer-container">
-  <div class="inner-container">
-    <div class="result-section">
-      <h1>Your Result</h1>
-      <div class="result-circile">
-        <span class="bold-num">76</span> of 100
+          <div class="summaries">
+            <div class="summary-container reaction">
+              <div class="left-section">
+                <img src="assets/images/icon-reaction.svg" alt="" />
+                <p>Reaction</p>
+              </div>
+
+              <p class="summary-num2"><span id="summary-num">80</span>/100</p>
+            </div>
+
+            <div class="summary-container memory">
+              <div class="left-section">
+                <img src="assets/images/icon-memory.svg" alt="" />
+                <p>Memory</p>
+              </div>
+
+              <p class="summary-num2"><span id="summary-num">92</span>/100</p>
+            </div>
+
+            <div class="summary-container verbal">
+              <div class="left-section">
+                <img src="assets/images/icon-verbal.svg" alt="" />
+                <p>Verbal</p>
+              </div>
+
+              <p class="summary-num2"><span id="summary-num">61</span>/100</p>
+            </div>
+
+            <div class="summary-container visual">
+              <div class="left-section">
+                <img src="assets/images/icon-visual.svg" alt="" />
+                <p>Visual</p>
+              </div>
+
+              <p class="summary-num2"><span id="summary-num">72</span>/100</p>
+            </div>
+          </div>
+
+          <button>Continue</button>
+        </div>
       </div>
-      <p>Great</p>
-      <p>You scored higher than 65% of the people who have taken these tests.</p>
     </div>
-    <div class="summary-section">
-      <h1>Summary</h1>
 
-      <div class="summary-container">
-        <div class="left-section">
-          <img src="assets/images/icon-reaction.svg" alt="">
-          <p>Reaction</p>
-        </div>
-
-        <p><span>80</span>/100</p>
-      </div>
-
-      <div class="summary-container">
-        <div class="left-section">
-          <img src="assets/images/icon-memory.svg" alt="">
-          <p>Memory</p>
-        </div>
-
-        <p><span>92</span>/100</p>
-      </div>
-
-      <div class="summary-container">
-        <div class="left-section">
-          <img src="assets/images/icon-verbal.svg" alt="">
-          <p>Verbal</p>
-        </div>
-
-        <p><span>61</span>/100</p>
-      </div>
-
-      <div class="summary-container">
-        <div class="left-section">
-          <img src="assets/images/icon-visual.svg" alt="">
-          <p>Visual</p>
-        </div>
-
-        <p><span>72</span>/100</p>
-      </div>
-
-      <button>Continue</button>
-    </div>
-  </div>
-</div>
-  
-  <!-- <div class="attribution">
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-</body>
+  </body>
 </html>
