--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
 
     <title>Frontend Mentor | Results summary component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="outer-container">
@@ -33,7 +23,7 @@
           <h1>Your Result</h1>
           <div class="result-circle">
             <span class="bold-num">76</span>
-            <span class="little-num">of 100</span>
+            <span class="little-num"style="color:rgb(152, 127, 221)">of 100</span>
           </div>
           <p style="margin: 0;font-weight: bold;">Great</p>
           <p class="result-text">
@@ -50,7 +40,7 @@
                 <p>Reaction</p>
               </div>
 
-              <p class="summary-num2"><span id="summary-num">80</span>/100</p>
+              <p class="summary-num2"><span id="summary-num">80</span> / 100</p>
             </div>
 
             <div class="summary-container memory">
@@ -59,7 +49,7 @@
                 <p>Memory</p>
               </div>
 
-              <p class="summary-num2"><span id="summary-num">92</span>/100</p>
+              <p class="summary-num2"><span id="summary-num">92</span> / 100</p>
             </div>
 
             <div class="summary-container verbal">
@@ -68,7 +58,7 @@
                 <p>Verbal</p>
               </div>
 
-              <p class="summary-num2"><span id="summary-num">61</span>/100</p>
+              <p class="summary-num2"><span id="summary-num">61</span> / 100</p>
             </div>
 
             <div class="summary-container visual">
@@ -77,18 +67,20 @@
                 <p>Visual</p>
               </div>
 
-              <p class="summary-num2"><span id="summary-num">72</span>/100</p>
+              <p class="summary-num2"><span id="summary-num">72</span> / 100</p>
             </div>
           </div>
 
           <button>Continue</button>
         </div>
       </div>
+
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/eniolasoar">Eniola Anishe</a>.
+      </div> 
     </div>
 
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+
   </body>
 </html>
