results dynamically added through json

--- a/index.html
+++ b/index.html
@@ -33,43 +33,9 @@
         <div class="summary-section">
           <h1>Summary</h1>
 
-          <div class="summaries">
-            <div class="summary-container reaction">
-              <div class="left-section">
-                <img src="assets/images/icon-reaction.svg" alt="" />
-                <p>Reaction</p>
-              </div>
-
-              <p class="summary-num2"><span id="summary-num">80</span> / 100</p>
-            </div>
-
-            <div class="summary-container memory">
-              <div class="left-section">
-                <img src="assets/images/icon-memory.svg" alt="" />
-                <p>Memory</p>
-              </div>
-
-              <p class="summary-num2"><span id="summary-num">92</span> / 100</p>
-            </div>
-
-            <div class="summary-container verbal">
-              <div class="left-section">
-                <img src="assets/images/icon-verbal.svg" alt="" />
-                <p>Verbal</p>
-              </div>
-
-              <p class="summary-num2"><span id="summary-num">61</span> / 100</p>
-            </div>
-
-            <div class="summary-container visual">
-              <div class="left-section">
-                <img src="assets/images/icon-visual.svg" alt="" />
-                <p>Visual</p>
-              </div>
-
-              <p class="summary-num2"><span id="summary-num">72</span> / 100</p>
-            </div>
+          <div class="summaries" id="parentNode">
           </div>
+          <script src="script.js"></script>
 
           <button>Continue</button>
         </div>
