--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <div class="result-section">
           <h1>Your Result</h1>
           <div class="result-circle">
-            <span class="bold-num">76</span>
+            <span class="bold-num" id="result-total"></span>
             <span class="little-num"style="color:rgb(152, 127, 221)">of 100</span>
           </div>
+          <script src="result.js"></script>
           <p style="margin: 0;font-weight: bold;">Great</p>
           <p class="result-text">
             You scored higher than 65% of the people who have taken these tests.
